--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EV Power Selector</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>EV Power Selector</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <img src="midas-logo.png" alt="Midas Logo" class="logo" />
-    <h1>EV Power Selector</h1>
+    <div class="container">
+        <img src="midas-logo.png" alt="Midas Logo" class="logo">
+        <h1>EV Power Selector</h1>
 
-    <form id="ev-form">
-      <label>騎乘質量 Rider Weight (kg):<input type="number" id="riderWeight" required /></label>
-      <label>車輛質量 Vehicle Weight (kg):<input type="number" id="vehicleWeight" required /></label>
-      <label>額定速度 Rated Speed (km/h):<input type="number" id="ratedSpeed" required /></label>
-      <label>輪胎直徑 Tire Diameter (m):<input type="number" step="0.0001" id="tireDiameter" required /></label>
-      <label>加速時間 Accel. Time (s):<input type="number" id="accelTime" required /></label>
-      <label>鏈輪齒比 Sprocket Ratio:<input type="number" step="0.01" id="sprocketRatio" required /></label>
-      <label>輪轂馬達減速比 Hub Gear Ratio:<input type="number" step="0.01" id="hubGearRatio" required /></label>
-      <button type="button" id="calculateButton">Calculate</button>
-    </form>
+        <label for="riderWeight">騎乘質量 Rider Weight (kg):</label>
+        <input type="number" id="riderWeight" value="34">
 
-    <div id="results" class="results"></div>
-  </div>
-  <script src="script.js"></script>
+        <label for="vehicleWeight">車輛質量 Vehicle Weight (kg):</label>
+        <input type="number" id="vehicleWeight" value="40">
+
+        <label for="ratedSpeed">額定速度 Rated Speed (km/h):</label>
+        <input type="number" id="ratedSpeed" value="23.8">
+
+        <label for="tireDiameter">輪胎直徑 Tire Diameter (m):</label>
+        <input type="number" id="tireDiameter" value="0.4064">
+
+        <label for="accelTime">加速時間 Accel. Time (s):</label>
+        <input type="number" id="accelTime" value="4">
+
+        <label for="sprocketRatio">鏈輪齒比 Sprocket Ratio:</label>
+        <input type="number" id="sprocketRatio" value="1.23">
+
+        <label for="hubGearRatio">輪轂馬達減速比 Hub Gear Ratio:</label>
+        <input type="number" id="hubGearRatio" value="5.43">
+
+        <button onclick="calculate()">Calculate</button>
+        <div id="results"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
